sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:7: error: not found: type int
		var nfin : int = 0;
                           ^